smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/use/use-missing-newline.smithy
// Syntax error at line 5, column 17: Expected a line break, but found IDENTIFIER('use') | Model
$version: "2.0"
namespace smithy.example

use com.foo#Bar use com.foo#Baz
